
* docutils/parsers/rst/directives/body.py:

  - Fixed illegal context bug with "topic" directive (allowed within
    sidebars; not within body elements).

* docutils/parsers/rst/directives/images.py:

  - Allowed whitespace (stripped) in "image" & "figure" directive URLs.
  - Added support for the ``file_insertion_enabled`` setting in the
    "figure" directive (disables "figwidth" option).

* docutils/parsers/rst/directives/misc.py:

  - Fixed "include" and "raw" directives to catch text decoding
    errors.
  - Allowed whitespace in "include" & "raw" directive paths.
  - Added support for ``file_insertion_enabled`` & ``raw_enabled``
    settings in "include" & "raw" directives.

* docutils/parsers/rst/directives/parts.py:

  - Added "header" & "footer" directives.
  - Fixed illegal context bug with "contents" directive (topics
    allowed within sidebars; not within body elements).

* docutils/parsers/rst/directives/tables.py:

  - Added "list-table" directive.
  - Caught empty CSV table bug.
  - Added support for the ``file_insertion_enabled`` setting in the
    "csv-table" directive.
  - Added ``stub-columns`` option to "csv-table" and "list-table"
    directives.

* docutils/parsers/rst/languages/nl.py: Added to project; Dutch
  mappings by Martijn Pieters.

* docutils/transforms/references.py:

  - Fixed mislocated internal targets bug, by propagating internal
    targets to the next node, making use of the newly added support
    for multiple names and IDs.
  - Fixed duplicate footnote label bug.
  - Replaced ``ChainedTargets`` with more generic ``PropagateTargets``
    transform.

* docutils/writers/html4css1.py:

  - Fixed unencoded stylesheet reference bug (characters like "&" in
    stylesheet references).
  - ``target`` nodes now appear as ``span`` tags (instead of ``a``
    tags).
  - Added support for multiple IDs per node by creating empty ``span``
    tags.
  - Added the ``field_name_limit`` & ``option_limit`` settings &
    support.